--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 body {
   font-family: 'Urbanist', sans-serif;
   background-color: #f5f7fa;
-  padding: 30px 20px;
+  padding: 0px 20px;
 }
 .main-container {
   display: grid;
@@ -18,8 +18,8 @@ body {
   max-width: 1200px;
   background-color: #fae6a0;
   box-shadow: 7px 10px 20px rgba(0, 0, 0, 0.322);
-  border: 2px solid #141002;
-  border-radius: 5px;
+  border-left: 8px solid #f4bf13;
+  border-right: 8px solid #f4bf13;
 
 }
 nav {
@@ -36,7 +36,7 @@ nav {
   "projects"
   "languages";
   gap: 20px;
-  padding: 30px 0px;
+  padding: 40px 0px;
   background: linear-gradient(180deg, #f09560, #d360f0);
 }
 .sidebar h3 {
@@ -47,7 +47,6 @@ nav {
 .photo {
   grid-area: photo;
   width: 100%;
-  border: 1px solid #141002;
 }
 .contacts {
   grid-area: contacts;
