--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
   box-sizing: border-box;
 }
 body {
-  font-family: 'Urbanist', sans-serif;
+  font-family: 'Bitter', serif;
+  letter-spacing: 0.2px;
   background-color: #f5f7fa;
   padding: 0px 20px;
 }
